# VPS-fastsearch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_GUIDE.md  LICENSE  README.md  benchmark_reranker.py  config.yaml.example  fastsearch-index-full.service  fastsearch-index-full.timer  fastsearch-index-incremental.service  fastsearch-index-incremental.timer  fastsearch.service  install.sh  package.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  vps-fastsearch.service
.github/workflows/: test.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEPLOYMENT.md  INTEGRATION.md  OpenClaw-Integration.md  PERFORMANCE.md  TROUBLESHOOTING.md  VPS-fastsearch-improvements.md  index.md  qmd-wrapper.py
examples/: incremental_indexer.py
fastsearch/: __init__.py  chunker.py  cli.py  client.py
tests/: conftest.py  memory_leak_test.py  test_chunker.py  test_cli.py  test_client.py  test_config.py  test_core.py  test_daemon.py
vps_fastsearch/: __init__.py  __main__.py  chunker.py  cli.py  client.py  config.py  core.py  daemon.py
wiki/: Comparison-with-Alternatives.md  FAQ.md  Getting-Started.md  Home.md  Use-Cases.md
