[project]
name = "vps-fastsearch"
version = "0.2.1"
description = "Fast hybrid BM25 + vector search for CPU-only VPS using ONNX Runtime"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = []
maintainers = []
keywords = [
    "search",
    "vector-search",
    "semantic-search",
    "bm25",
    "embeddings",
    "rag",
    "retrieval",
    "nlp",
    "sqlite",
    "fts5",
    "onnx",
    "cpu-inference"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
dependencies = [
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.1",
    "apsw>=3.45",
    "click>=8.0",
    "orjson>=3.9",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=2.2.0",
]
all = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
vps-fastsearch = "vps_fastsearch.cli:cli"

[project.urls]
Documentation = "https://github.com/NarlySoftware/VPS-fastsearch#readme"
Repository = "https://github.com/NarlySoftware/VPS-fastsearch"
Issues = "https://github.com/NarlySoftware/VPS-fastsearch/issues"
Changelog = "https://github.com/NarlySoftware/VPS-fastsearch/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vps_fastsearch"]

[tool.hatch.build.targets.sdist]
include = [
    "vps_fastsearch/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
